C++II/.metadata/.plugins/org.eclipse.cdt.ui/(10-19) Pointers.build.log
15:05:35 **** Incremental Build of configuration Debug for project (10-19) Pointers ****
make all 
Building file: ../src/(10-19) Pointers.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/(10-19) Pointers.d" -MT"src/(10-19)\ Pointers.d" -o "src/(10-19) Pointers.o" "../src/(10-19) Pointers.cpp"
../src/(10-19) Pointers.cpp: In function ‘int main()’:
../src/(10-19) Pointers.cpp:44:37: error: cast from ‘int*’ to ‘int’ loses precision [-fpermissive]
     cout << "pInt now has " << (int)pInt << endl;  // prints the same address.
                                     ^
../src/(10-19) Pointers.cpp:46:39: error: cast from ‘int*’ to ‘int’ loses precision [-fpermissive]
     cout << "pInt contains " << (int) pInt << " and now points to " << *pInt << endl; // prints points to the -1 in our array.
                                       ^
../src/(10-19) Pointers.cpp:48:39: error: cast from ‘int*’ to ‘int’ loses precision [-fpermissive]
     cout << "pInt contains " << (int) pInt << " and now points to " << *pInt << endl; //points to -2 in our array A.
                                       ^
../src/(10-19) Pointers.cpp:51:38: error: cast from ‘int*’ to ‘int’ loses precision [-fpermissive]
    cout << "pInt contains " << (int) pInt << " and now points to " << *pInt << endl;
                                      ^
../src/(10-19) Pointers.cpp:55:38: error: cast from ‘int*’ to ‘int’ loses precision [-fpermissive]
    cout << "pInt contains " << (int) pInt << " and now points to " << *pInt << endl;
                                      ^
../src/(10-19) Pointers.cpp:15:8: warning: unused variable ‘pChar’ [-Wunused-variable]
  char* pChar; //the space between the data type and * is optional
        ^
make: *** [src/(10-19) Pointers.o] Error 1

15:05:36 Build Finished (took 486ms)

